# Dewdrop

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  ReadMe.md
Docs/: Doxyfile
Examples/: CMakeLists.txt
Examples/00-DEV/: CMakeLists.txt  main.cpp
Tools/: Version.h.in
include/: Dewdrop.h
include/Dewdrop/: Dewdrop.h  Logging.h  Maths.h  Platform.h  Profiler.h  Renderer.h  Timer.h  Types.h  Version.h  Window.h
include/Dewdrop/Graphics/: Context.h  Swapchain.h
include/Dewdrop/Maths/: Constants.h  Matrix.h  Matrix.inl  Vector.h  Vector.inl
src/: Dewdrop.cpp  Renderer.cpp  Timer.cpp  Version.cpp  Window.cpp
src/Graphics/DX11/: DX11_Common.h  DX11_Context.cpp  DX11_Context.h  DX11_Swapchain.cpp  DX11_Swapchain.h
src/Platform/: DD_Win32.cpp
tests/: CMakeLists.txt  Maths.cpp  tests.cpp
